ws_moveit/src/Diana7/include/DianaAPI.h

extern "C" typedef enum _MoveTCPDirection {
    T_MOVE_X_UP,
    T_MOVE_X_DOWN,
    T_MOVE_Y_UP,
    T_MOVE_Y_DOWN,
    T_MOVE_Z_UP,
    T_MOVE_Z_DOWN
} tcp_direction_e;
extern "C" typedef enum _Coordinate_E {
    E_BASE_COORDINATE = 0,
    E_TOOL_COORDINATE,
    E_WORK_PIECE_COORDINATE,
    E_VIEW_COORDINATE
} coordinate_e;
DIANA_API int getLastError(const char *strIpAddress = "");
DIANA_API int stopProgram(const char *programName, /*IN*/ const char *strIpAddress = "");
DIANA_API int isTaskRunning(const char *variableName, /*IN*/ const char *strIpAddress = "");
DIANA_API int pauseProgram(const char *strIpAddress = "");
DIANA_API int resumeProgram(const char *strIpAddress = "");
DIANA_API int stopAllProgram(const char *strIpAddress = "");
DIANA_API int isAnyTaskRunning(const char *strIpAddress = "");
/*************************************** version 1.4***************************************/

DIANA_API int cleanErrorInfo(const char *strIpAddress = "");
DIANA_API int setCollisionLevel(int level, /*IN*/ const char *strIpAddress = "");
/*************************************** version 1.5***************************************/

DIANA_API int getJointCount(const char *strIpAddress = "");
DIANA_API int getWayPoint(const char *waypointName, double *dblTcppos, double *dblJoints,
                          /*IN*/ const char *strIpAddress = "");
DIANA_API int setWayPoint(const char *waypointName, double *dblTcppos, double *dblJoints,
                          /*IN*/ const char *strIpAddress = "");
DIANA_API int addWayPoint(const char *waypointName, double *dblTcppos, double *dblJoints,
                          /*IN*/ const char *strIpAddress = "");
DIANA_API int deleteWayPoint(const char *waypointName, /*IN*/ const char *strIpAddress = "");
/*************************************** version 1.6***************************************/

DIANA_API int getDefaultActiveTcp(/*OUT[16]*/ double *default_tcp, /*IN*/ const char *strIpAddress = "");
DIANA_API int getDefaultActiveTcpPose(/*OUT[6]*/ double *arrPose, /*IN*/ const char *strIpAddress = "");
DIANA_API int getActiveTcpPayload(/*OUT[10]*/ double *payload, /*IN*/ const char *strIpAddress = "");
DIANA_API int zeroSpaceManualMove(/*IN*/ int direction, /*IN[7 or 6]*/ double *dblJointsVel,
                                  /*IN[7 or 6]*/ double *dblJointAcc, /*IN*/ const char *strIpAddress = "");
DIANA_API int moveTcp_ex(/*IN*/ coordinate_e c, /*IN*/ tcp_direction_e d, /*IN*/ double v, /*IN*/ double a,
                         /*IN*/ const char *strIpAddress = "");
DIANA_API int setExternalAppendTorCutoffFreq(/*IN*/ double dblFreq, /*IN*/ const char *strIpAddress = "");
DIANA_API int poseTransform(/*IN[6]*/ double *srcPose, /*IN[6]*/ double *srcMatrixPose, /*IN[6]*/ double *dstMartixPose,
                            /*OUT[6]*/ double *dstPose);
DIANA_API int updateForce(/*IN[3]*/ double *dblForceDirection, /*[IN]*/ double dblForceValue,
                          /*IN*/ const char *strIpAddress = "");
DIANA_API int updateForce_ex(/*IN[3]*/ double *dblForceDirection, /*[IN]*/ double dblForceValue,
                             /*IN[6]*/ double *dblActiveTcp = nullptr, /*IN*/ const char *strIpAddress = "");