ws_moveit/src/Diana7/bin/DianaApi.py


def isTaskRunning(name, ipAddress=''):
    api_mod.isTaskRunning.argtypes = [c_char_p, c_char_p]
    api_mod.isTaskRunning.restype = c_int
    ret = api_mod.isTaskRunning(
        bytes(name, encoding="utf-8"), bytes(ipAddress.encode('utf-8')))
    if(ret >= 0):
        return True
    if(ret== -1):
        return False
    else:
        errorcode = getLastError()
        errorMessage = errorCodeMessage.get(errorcode)
        callerName = 'function ' + sys._getframe().f_back.f_code.co_name + ' fails,'
        if errorMessage == None:
            print(callerName + 'Error Code ' + str(errorcode))
        else:
            print(callerName + errorMessage)
        return False


def pauseProgram(ipAddress=''):
    api_mod.stopProgram.argtypes = [c_char_p]
    api_mod.pauseProgram.restype = c_int
    ret = api_mod.pauseProgram(bytes(ipAddress.encode('utf-8')))
    return message(ret)


def resumeProgram(ipAddress=''):
    api_mod.resumeProgram.argtypes = [c_char_p]
    api_mod.resumeProgram.restype = c_int
    ret = api_mod.resumeProgram(bytes(ipAddress.encode('utf-8')))
    return message(ret)


def stopAllProgram(ipAddress=''):
    api_mod.stopAllProgram.argtypes = [c_char_p]
    api_mod.stopAllProgram.restype = c_int
    ret = api_mod.stopAllProgram(bytes(ipAddress.encode('utf-8')))
    return message(ret)


def isAnyTaskRunning(ipAddress=''):
    api_mod.isAnyTaskRunning.argtypes = [c_char_p]
    api_mod.isAnyTaskRunning.restype = c_int
    ret = api_mod.isAnyTaskRunning(bytes(ipAddress.encode('utf-8')))
    if(ret >= 0):
        return True
    if(ret== -1):
        return False
    else:
        errorcode = getLastError()
        errorMessage = errorCodeMessage.get(errorcode)
        callerName = 'function ' + sys._getframe().f_back.f_code.co_name + ' fails,'
        if errorMessage == None:
            print(callerName + 'Error Code ' + str(errorcode))
        else:
            print(callerName + errorMessage)
        return False

###################### version 1.40#########################


def cleanErrorInfo(ipAddress=''):
    api_mod.cleanErrorInfo.argtypes = [c_char_p]
    api_mod.cleanErrorInfo.restype = c_int
    ret = api_mod.cleanErrorInfo(bytes(ipAddress.encode('utf-8')))
    return message(ret)


def setCollisionLevel(level, ipAddress=''):
    if not isinstance(level, collision_level):
        raise TypeError('level must be an instance of collision_level Enum')
    api_mod.setCollisionLevel.argtypes = [c_int, c_char_p]
    api_mod.setCollisionLevel.restype = c_int
    ret = api_mod.setCollisionLevel(
        level.value, bytes(ipAddress.encode('utf-8')))
    return message(ret)


###################### version 1.50#########################

def getJointCount(ipAddress=''):
    api_mod.getJointCount.argtypes = [c_char_p]
    api_mod.getJointCount.restype = c_int
    count = api_mod.getJointCount(bytes(ipAddress.encode('utf-8')))
    return count


def getWayPoint(waypointName, dblTcppos, dblJoints, ipAddress=''):
    api_mod.getWayPoint.restype = c_int
    dianaTcpPose = DIANA_TCP_POSE()
    dianaTcpPose.values = (c_double * 6)()
    dianaJointPos = DIANA_JOINTS_POSITION()
    dianaJointPos.values = (c_double * 7)()
    api_mod.getWayPoint.argtypes = [
        c_char_p, POINTER(DIANA_TCP_POSE), POINTER(DIANA_JOINTS_POSITION), c_char_p]
    ret = api_mod.getWayPoint(
        bytes(waypointName.encode('utf-8')), dianaTcpPose, dianaJointPos, bytes(ipAddress.encode('utf-8')))
    for index in range(0, len(dblTcppos)):
        dblTcppos[index] = dianaTcpPose.values[index]
    for index in range(0, len(dblJoints)):
        dblJoints[index] = dianaJointPos.values[index]
    return message(ret)

def setWayPoint(waypointName, dblTcppos, dblJoints, ipAddress=''):
    dianaTcpPose = DIANA_TCP_POSE()
    dianaTcpPose.values = (c_double * 6)()
    for index in range(0, len(dblTcppos)):
        dianaTcpPose.values[index] = dblTcppos[index]
    dianaJointPos = DIANA_JOINTS_POSITION()
    dianaJointPos.values = (c_double * 7)()
    for index in range(0, len(dblJoints)):
        dianaJointPos.values[index] = dblJoints[index]
    api_mod.setWayPoint.restype = c_int
    api_mod.setWayPoint.argtypes = [
        c_char_p, POINTER(DIANA_TCP_POSE), POINTER(DIANA_JOINTS_POSITION), c_char_p]
    ret = api_mod.setWayPoint(
        bytes(waypointName.encode('utf-8')), dianaTcpPose, dianaJointPos, bytes(ipAddress.encode('utf-8')))
    return message(ret)


def addWayPoint(waypointName, dblTcppos, dblJoints, ipAddress=''):
    dianaTcpPose = DIANA_TCP_POSE()
    dianaTcpPose.values = (c_double * 6)()
    for index in range(0, len(dblTcppos)):
        dianaTcpPose.values[index] = dblTcppos[index]
    dianaJointPos = DIANA_JOINTS_POSITION()
    dianaJointPos.values = (c_double * 7)()
    for index in range(0, len(dblJoints)):
        dianaJointPos.values[index] = dblJoints[index]
    api_mod.addWayPoint.restype = c_int
    api_mod.addWayPoint.argtypes = [
        c_char_p, POINTER(DIANA_TCP_POSE), POINTER(DIANA_JOINTS_POSITION), c_char_p]
    ret = api_mod.addWayPoint(
        bytes(waypointName.encode('utf-8')), dianaTcpPose, dianaJointPos, bytes(ipAddress.encode('utf-8')))
    return message(ret)


def deleteWayPoint(waypointName, ipAddress=''):
    api_mod.deleteWayPoint.argtypes = [c_char_p, c_char_p]
    api_mod.deleteWayPoint.restype = c_int
    ret = api_mod.deleteWayPoint(
        bytes(waypointName.encode('utf-8')), bytes(ipAddress.encode('utf-8')))
    return message(ret)


###################### version 1.60#########################


def getDefaultActiveTcp(default_tcp, ipAddress=''):
    defaultTcp = DIANA_DEFAULT_TCP()
    defaultTcp.values = (c_double*16)()
    api_mod.getDefaultActiveTcp.argtypes = [
        POINTER(DIANA_DEFAULT_TCP), c_char_p]
    api_mod.getDefaultActiveTcp.restype = c_int
    ret = api_mod.getDefaultActiveTcp(
        defaultTcp, bytes(ipAddress.encode('utf-8')))
    for index in range(0, len(defaultTcp.values)):
        default_tcp[index] = defaultTcp.values[index]
    return message(ret)


def getDefaultActiveTcpPose(arrPose, ipAddress=''):
    pose = DIANA_TCP_POSE()
    pose.values = (c_double*6)()
    api_mod.getDefaultActiveTcpPose.argtypes = [
        POINTER(DIANA_TCP_POSE), c_char_p]
    api_mod.getDefaultActiveTcpPose.restype = c_int
    ret = api_mod.getDefaultActiveTcpPose(
        pose, bytes(ipAddress.encode('utf-8')))
    for index in range(0, len(pose.values)):
        arrPose[index] = pose.values[index]
    return message(ret)


def getActiveTcpPayload(payload, ipAddress=''):
    tcpPayload = DIANA_TCP_PAYLOAD()
    tcpPayload.values = (c_double*10)()
    api_mod.getActiveTcpPayload.argtypes = [
        POINTER(DIANA_TCP_PAYLOAD), c_char_p]
    api_mod.getActiveTcpPayload.restype = c_int
    ret = api_mod.getActiveTcpPayload(
        tcpPayload, bytes(ipAddress.encode('utf-8')))
    for index in range(0, len(tcpPayload.values)):
        payload[index] = tcpPayload.values[index]
    return message(ret)


def zeroSpaceManualMove(direction, dblJointsVel, dblJointAcc, ipAddress=''):
    if not isinstance(direction, zero_space_move_direction):
        raise TypeError(
            'direction must be an instance of zero_space_move_direction Enum')
    joint_vel = DIANA_JOINT_ANGULAR_VEL()
    joint_vel.values = (c_double*7)()
    for index in range(0, len(dblJointsVel)):
        joint_vel.values[index] = dblJointsVel[index]
    joint_acc = DIANA_JOINT_ACC()
    joint_acc.values = (c_double*7)()
    for index in range(0, len(joint_acc.values)):
        joint_acc.values[index] = dblJointAcc[index]
    api_mod.zeroSpaceManualMove.argtypes = [c_int, POINTER(
        DIANA_JOINT_ANGULAR_VEL), POINTER(DIANA_JOINT_ACC), c_char_p]
    api_mod.zeroSpaceManualMove.restype = c_int
    ret = api_mod.zeroSpaceManualMove(
        direction.value, joint_vel, joint_acc, bytes(ipAddress.encode('utf-8')))
    return message(ret)


def moveTcp_ex(coordinate, direction, velocity, accleartion, ipAddress=''):
    if not isinstance(coordinate, coordinate_e):
        raise TypeError(
            'coordinate must be an instance of coordinate_e Enum')
    if not isinstance(direction, tcp_direction_e):
        raise TypeError(
            'direction must be an instance of tcp_direction_e Enum')
    api_mod.moveTcp_ex.argtypes = [c_int, c_int, c_double, c_double, c_char_p]
    api_mod.moveTcp_ex.restype = c_int
    ret = api_mod.moveTcp_ex(
        coordinate.value, direction.value, velocity, accleartion, bytes(ipAddress.encode('utf-8')))
    return message(ret)


def setExternalAppendTorCutoffFreq(dblFreq, ipAddress=''):
    api_mod.setExternalAppendTorCutoffFreq.argtypes = [c_double, c_char_p]
    api_mod.setExternalAppendTorCutoffFreq.restype = c_int
    ret = api_mod.setExternalAppendTorCutoffFreq(
        dblFreq, bytes(ipAddress.encode('utf-8')))
    return message(ret)


def poseTransform(srcPose, srcMatrixPose, dstMartixPose, dstPose):
  srcTcpPose = DIANA_TCP_POSE()
  srcTcpPose.values = (c_double * 6)()
  for index in range(0, len(srcTcpPose.values)):
    srcTcpPose.values[index] = srcPose[index]
  srcMatrix = DIANA_TCP_POSE()
  srcMatrix.values = (c_double * 6)()
  for index in range(0, len(srcMatrix.values)):
    srcMatrix.values[index] = srcMatrixPose[index]
  dstTcpPose = DIANA_TCP_POSE()
  dstTcpPose.values = (c_double * 6)()
  for index in range(0, len(dstTcpPose.values)):
    dstTcpPose.values[index] = dstMartixPose[index]
  dstTarPose = DIANA_TCP_POSE()
  dstTarPose.values = (c_double * 6)()
  for index in range(0, len(dstTarPose.values)):
    dstPose[index] = -1
  api_mod.poseTransform.argtypes = [POINTER(DIANA_TCP_POSE), POINTER(
      DIANA_TCP_POSE), POINTER(DIANA_TCP_POSE), POINTER(DIANA_TCP_POSE)]
  api_mod.poseTransform.restype = c_int
  ret = api_mod.poseTransform(byref(srcTcpPose), byref(
      srcMatrix), byref(dstTcpPose), byref(dstTarPose))
  for index in range(0, len(dstTarPose.values)):
      dstPose[index] = dstTarPose.values[index]
  return message(ret)

def updateForce(forceDirection,forceValue, ipAddress=''):
    arr_ForceDirection = DIANA_FORCE_DIRECTION()
    arr_ForceDirection.values = (c_double*3)()
    for index in range(0, len(arr_ForceDirection.values)):
        arr_ForceDirection.values[index] = forceDirection[index]
    api_mod.updateForce.restype = c_int
    api_mod.updateForce.argtypes = [POINTER(DIANA_FORCE_DIRECTION),c_double, c_char_p]
    ret = api_mod.updateForce(byref(arr_ForceDirection),forceValue, bytes(ipAddress.encode('utf-8')))
    return message(ret)

def updateForce_ex(forceDirection,forceValue, active_tcp=None, ipAddress=''):
    arr_ForceDirection = DIANA_FORCE_DIRECTION()
    arr_ForceDirection.values = (c_double*3)()
    for index in range(0, len(arr_ForceDirection.values)):
        arr_ForceDirection.values[index] = forceDirection[index]
    ret = 0
    if active_tcp==None:
        use_active_tcp = c_void_p(0)
        api_mod.updateForce_ex.restype = c_int
        api_mod.updateForce_ex.argtypes = [POINTER(DIANA_FORCE_DIRECTION),c_double,c_void_p, c_char_p]
        ret = api_mod.updateForce_ex(byref(arr_ForceDirection),forceValue,use_active_tcp, bytes(ipAddress.encode('utf-8')))
    else:
        arr_Active_Tcp = DIANA_ACTIVE_TCP()
        arr_Active_Tcp.values = (c_double*6)()
        for index in range(0, len(arr_Active_Tcp.values)):
            arr_Active_Tcp.values[index] = active_tcp[index]
        api_mod.updateForce_ex.restype = c_int
        api_mod.updateForce_ex.argtypes = [POINTER(DIANA_FORCE_DIRECTION),c_double,POINTER(DIANA_ACTIVE_TCP), c_char_p]
        ret = api_mod.updateForce_ex(byref(arr_ForceDirection),forceValue,byref(arr_Active_Tcp), bytes(ipAddress.encode('utf-8')))
    return message(ret)
